--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 ##admin username and password log in
+ADMIN_USERNAME=Eagle
+ADMIN_PASSWORD=eagle1
+MONGO_URI=mongodb+srv://paul044:.Millicent99@react-course.lorip.mongodb.net/?retryWrites=true&w=majority
